[package]
name = "pulsaris_master_token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["idl-build"] }

[features]
no-entrypoint = []
anchor-debug  = []
idl-build     = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

cpi            = []
custom-heap    = []
custom-panic   = []
no-idl         = []
no-log-ix-name = []
