[package]
name = "pulsaris_staking"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.32.1", default-features = false }
anchor-spl  = { version = "0.32.1", features = ["idl-build"] }

[features]
no-entrypoint = []
anchor-debug  = []
idl-build     = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# Add these to silence the "unexpected cfg" warnings
cpi            = []
custom-heap    = []
custom-panic   = []
no-idl         = []
no-log-ix-name = []
